--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "express": "^5.1.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.3.4",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
